feat: Update theme and enhance Hero component with new features

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,11 @@
 @import "tailwindcss";
 @plugin "daisyui" {
-	themes: light --default, cupcacke;
+	themes: light --default, bumblebee;
+}
+
+@font-face {
+	font-family: "Marhey";
+	src: url("../assets/Marhey-Regular.woff") format("woff");
 }
 
 /* :root {
